--- a/_data/personal.yml
+++ b/_data/personal.yml
@@ -1,44 +1,41 @@
-name: Ian Li
+name: James Matthews
 
-label: UI Designer
+label: Astrophysicist
 
-picture: /img/profile-picture.jpg
+picture: /img/guitar1.jpg
 
-email: ianli@ianli.com
+email: jm8g08@soton.ac.uk
 
 phone: 
 
-department: Android UX
+department: Department of Physics and Astronomy
 
-institution: Google
+institution: University of Southampton
 
 mailing_address: >
-  1600 Amphitheatre Parkway
-  Mountain View, CA 94043
+  Southampton 
+  SO17 1BJ
+
 
 profiles:
-  - 
-    network: Google Scholar
-    username:
-    url: http://scholar.google.com/citations?user=JS7sVyQAAAAJ&hl=en
   -
     network: LinkedIn
     username:
-    url: https://www.linkedin.com/pub/ian-li/1/681/8b0
+    url: 
   -
     network: Twitter
-    username: ianli
-    url: https://twitter.com/ianli/
+    username: tigerrrboy
+    url: https://twitter.com/tigerrrboy/
+  -
+    network: Github
+    username: jhmatthews
+    url: https://github.com/jhmatthews/
 
 intro:
   title: Hello!
   body: >
-    I'm a UI designer at Google.
-    Before Google, I was a Ph.D. student in the 
-    [Human-Computer Interaction Institute](http://hcii.cs.cmu.edu/) at Carnegie Mellon University.
-    My advisors were 
-    [Anind Dey](http://www.cs.cmu.edu/~anind/) and 
-    [Jodi Forlizzi](http://goodgestreet.com/). 
-    I worked on designed and developed 
-    [personal informatics tools](http://www.personalinformatics.org/) that help people better understand their own behavior.
-    [My dissertation](http://ianli.com/thesis/) explored how contextual information can improve self-knowledge in personal informatics systems.
+    I'm an astrophysics PhD student studying at the University of Southampton.
+    My research involves using a Monte Carlo radiative transfer code to model 
+    accretion disk winds and the spectral features they produce. 
+    I am supervised by Professor Christian Knigge. You can find more details
+    on my research, outreach and publications below.
