--- a/_data/presentations.yml
+++ b/_data/presentations.yml
@@ -1,46 +1,23 @@
 -
-  title: Integrating Visualizations with Innertube
-  location: Quantified Self 2011 Amsterdam
-  date: November 2011
-  slides_url: http://www.slideshare.net/ianli/integrating-visualizations-with-innertube-quantified-self-2011-amsterdam
+  title: Modelling the Spectra of Quasars- Clumpy Winds and X-ray Properties
+  location: The Extremes of Black Hole Accretion, Madrid, China
+  date: June 2015
+  slides_url: http://adsabs.harvard.edu/cgi-bin/nph-data_query?bibcode=2015ebha.confE..47M&link_type=ARTICLE&db_key=AST&high=
 -
-  title: 3 Design Considerations for Personal Informatics Tools
-  location: Quantified Self 2011 Amsterdam
-  date: November 2011
-  slides_url: http://www.slideshare.net/ianli/3-design-considerations-for-personal-informatics-tools
+  title: Modelling the Spectra of Quasars- Clumpy Winds and X-ray Properties
+  location: Black Hole Accretion and AGN Feedback, Shanghai, China
+  date: June 2015
+  slides_url: http://adsabs.harvard.edu/cgi-bin/nph-data_query?bibcode=2015ebha.confE..47M&link_type=ARTICLE&db_key=AST&high=
 -
-  title: "Understanding My Data, Myself: Supporting Self-Reflection with Ubicomp Technologies"
-  location: Ubicomp 2011, Beijing China
-  date: September 2011
-  slides_url: http://www.slideshare.net/ianli/ubicomp-2011-understanding-my-data-myself-supporting-selfreflection-with-ubicomp-technologies
+  title: Public Talk- The Search For Alien Life
+  location: Multiple Locations including Stargazing Live on campus event
+  date: 2015 onwards
 -
-  title: "Thesis Defense - Personal Informatics and Context: Using Context to Reveal Factors that Affect Behavior"
-  location: Carnegie Mellon University
-  date: August 2011
-  slides_url: http://www.slideshare.net/ianli/thesis-defense-personal-informatics-and-context-using-context-to-reveal-factors-that-affect-behavior
-  video_url: https://www.youtube.com/playlist?list=PL9835206DC02F2E98
+  title: Modelling the Spectra of Quasars
+  location: Accretion Disc Winds Meeting, Durham, UK
+  date: June 2014
 -
-  title: "Challenges of Self-Tracking (or Why I Spent 7 Years Doing Research"
-  location: Quantified Self 2011, Mountain View, CA
-  date: June 2011
-  slides_url: http://www.slideshare.net/ianli/challenges-of-selftracking-or-why-i-spent-7-years-doing-research
+  title: Searching for Nearby Planets During Predicted Mesolensing Events
+  location: Exoplanet Lunch, Harvard CfA, USA
+  date: June 2015
 -
-  title: "Holistic & Human-Centered: Towards Making Better Self-Tracking Tools"
-  location: Institute for the Future Health Horizons 2010, Sausalito, CA
-  date: June 2010
-  slides_url: http://www.slideshare.net/ianli/holistic-humancentered-towards-making-better-selftracking-tools-ian-li-iftf-hh-2010
--
-  title: "Personal Informatics and HCI"
-  location: Intel, Santa Clara, CA
-  date: June 2010
-  slides_url: http://www.slideshare.net/ianli/personal-informatics-and-hci-ian-li-june-2010
--
-  title: A Stage-Based Model of Personal Informatics Systems
-  location: CHI 2010, Atlanta, GA
-  date: April 2010
-  slides_url: http://www.slideshare.net/ianli/a-stagebased-model-of-personal-informatics-systems-chi-2010-talk
--
-  title: "Thesis Proposal - Personal Informatics and Context: Using Context to Reveal Factors that Affect Behavior"
-  location: Carnegie Mellon University
-  date: March 2010
-  slides_url: http://www.slideshare.net/ianli/personal-informatics-and-context-using-context-to-reveal-factors-that-affect-behavior
