trying to build

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -32,4 +32,13 @@
   pdf: http://adsabs.harvard.edu/cgi-bin/nph-data_query?bibcode=2013MNRAS.436.1390H&link_type=ARTICLE&db_key=AST&high=
   url: http://adsabs.harvard.edu/abs/2013MNRAS.436.1390H
 -
-
+  type: journal
+  title: "A simple disc wind model for broad absorption line quasars"
+  authors: Di Stefano, Rosanne; Matthews, James; Lépine, Sébastien
+  journal: ApJ
+  volume: 779
+  issue: 2
+  year: 2013
+  month: July
+  pdf: http://adsabs.harvard.edu/cgi-bin/nph-data_query?bibcode=2013ApJ...771...79D&link_type=ARTICLE&db_key=AST&high=
+  url: http://adsabs.harvard.edu/abs/2013ApJ...771...79D
